# daylily-ephemeral-cluster

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  AUTH_FIXES_SUMMARY.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_SUMMARY.md  CONTRIBUTING.md  CONTROL_BUCKET_CONFIGURATION_GUIDE.md  CONTROL_BUCKET_FIX_SUMMARY.md  CONTROL_PLANE_ARCHITECTURE_VERIFICATION.md  DELIVERABLES.md  DOCUMENTS_INDEX.md  ENDPOINT_VERIFICATION_REPORT.md  FILE_SYSTEM_INDEX.md  FILE_SYSTEM_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_REPORT.md  INDEX.md  PASSWORD_RESET_AND_NOAUTH_FIX.md  PLAN.md  QUICK_REFERENCE.md  QUICK_START_CONTROL_BUCKET.md  README-NEW.md  README.md  README.md.bland  README_CONTROL_BUCKET_FIX.md  README_STYLE_GUIDE.md  READY_FOR_RELEASE.md  REFACTOR_IMPLEMENTATION_PLAN.md  REFACTOR_SPEC.md  SECURITY_FIX_SUMMARY.md  SOLUTION_SUMMARY.md  START_HERE.md  TASK_LIST_SUMMARY.md  TASK_RELEASE_CHECKLIST.md  TEST_SUMMARY.md  UI_ASSESSMENT_EXECUTIVE_SUMMARY.md  UI_ASSESSMENT_INDEX.md  (+21 more)
config/: daylily-workset-monitor.yaml  daylily_available_repositories.yaml  daylily_cli_global.yaml  daylily_ephemeral_cluster.yaml  daylily_ephemeral_cluster_template.yaml  daylily_work.yaml
daylib/: __init__.py  biospecimen.py  biospecimen_api.py  config.py  day_concrete_components.py  day_cost_components.py  day_cost_ec2.py  day_factory.py  exceptions.py  file_api.py  file_metadata.py  file_registry.py  file_upload.py  manifest_registry.py  s3_bucket_validator.py  workset_api.py  workset_auth.py  workset_concurrent_processor.py  workset_customer.py  workset_diagnostics.py  workset_integration.py  workset_metrics.py  workset_monitor.py  workset_multi_region.py  workset_notifications.py  workset_scheduler.py  workset_state_db.py  workset_validation.py
daylily_ec/: __init__.py  __main__.py  _registry_v2.py  cli.py  create.py  headnode.py  repositories.py  run_mounts.py  ssh_to_ssm_e2e_runner.py  stage_samples.py  ui.py  versioning.py
daylily_ephemeral_cluster.egg-info/: PKG-INFO  SOURCES.txt
docs/: ARCHITECTURE.md  AUTHENTICATION_SETUP.md  CONCURRENT_PROCESSING.md  CUSTOMER_PORTAL.md  DAY_EC_ENVIRONMENT.md  FEATURE_SUMMARY.md  IAM_SETUP_GUIDE.md  INTEGRATION_GUIDE.md  LSMC_run_directory_mounting_run_analysis_spec.md  MIGRATION_GUIDE.md  OPTIONAL_AUTHENTICATION.md  QUICKSTART_WORKSET_MONITOR.md  QUICK_REFERENCE.md  WORKSET_MONITOR_ENHANCEMENTS.md  WORKSET_MONITOR_README.md  aws_setup.md  cli_reference.md  dra_fsx_strategy.md  monitoring_and_troubleshooting.md  operations.md  overview.md  pip_install.md  quickest_start.md  testing_and_debugging.md  ultra_rapid_start.md  workset-monitor.md
docs_orig/: README.md  README.md.bland
etc/: analysis_samples_template.tsv
examples/: run_api_with_auth.py  run_api_with_new_cognito.sh  run_api_without_auth.py
fffffff-6c33fbc9/: 20260116T125815Z_samples.tsv  20260116T125815Z_units.tsv  stage_samples.tsv
processing_prod_data/: PROD_STAGING_COMMANDS.md  s3_inventory_kind_counts.tsv  staging_summary.tsv  ultima_504970-20260331_1722_analysis_sample_manifest.tsv  ultima_505064-20260331_2020_analysis_sample_manifest.tsv  ultima_602220-20260417_2047_analysis_sample_manifest.tsv  ultima_602221-20260417_2346_analysis_sample_manifest.tsv  workflow_launch_summary.tsv
scripts/: _clusters.txt  _delete.txt  _describe.txt  _squeue.txt  cfg_headnode.sh  check_dynamodb_table.py  commit_iam_root_fix.sh  create_cluster.sh  drop_daylily_tables.py  finish_headnode_cfg.sh  fix_headnode.sh  init_biospecimen_tables.py  inventory_q1_dayoa_analysis.py  poll_cluster.sh  run_headnode_cfg.sh
take2-9419a35a/: 20260116T133759Z_units.tsv  stage_samples.tsv
templates/: account.html  base.html  dashboard.html  docs.html  files.html  manifest_generator.html  usage.html  yaml_generator.html
tests/: __init__.py  conftest.py  test_activate.py  test_aws_context.py  test_aws_validation.py  (+53 more)
(+245 files in other folders)
