[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "daylily-ephemeral-cluster"
dynamic = ["version"]
description = "Infrastructure-as-code for ephemeral AWS ParallelCluster environments for bioinformatics"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Daylily Informatics", email = "daylily@daylilyinformatics.com"}
]
dependencies = [
    "boto3>=1.26.0",
    "pyyaml>=6.0",
    "ruamel.yaml>=0.18.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "cli-core-yo>=0.2.1",
    # Used by legacy bin/*.py tools (installed via setup.py script_files).
    "requests>=2.31.0",
    "tabulate>=0.8.10",
    "python-dateutil>=2.8.2",
    # Provides the `pcluster` CLI used by the control plane + scripts.
    "aws-parallelcluster==3.13.2",
    # Required for reference-bucket verification in daylily_ec.aws.s3.
    "daylily-omics-references @ git+https://github.com/Daylily-Informatics/daylily-omics-references.git@0.3.1",
]

[project.scripts]
daylily-ec = "daylily_ec.cli:main"

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "moto>=4.2.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "boto3-stubs[ec2,s3]>=1.28.0",
]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
fallback_version = "0.0.0"

[tool.setuptools.packages.find]
include = ["daylib*", "daylily_ec*"]

[tool.setuptools.package-data]
"daylily_ec.resources" = ["payload/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

# Conda Environment Configuration
# Preferred environment: DAY-EC
# To activate: conda activate DAY-EC
# The DAY-EC environment should include all dependencies listed above
